Server/django.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: django
    tier: backend
spec:
  type: NodePort
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: django
    tier: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
      tier: backend
  template:
    metadata:
      labels:
        app: django
        tier: backend
    spec:
      containers:
      - name: django
        image: "back"
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "5Gi"
            cpu: "6"
        ports:
        - containerPort: 8000
        volumeMounts:
          - name: django-persistent-storage
            mountPath: /data
      volumes:
      - name: django-persistent-storage
        persistentVolumeClaim:
          claimName: django-claim
